<resources>
    <string name="app_name">SocialMediaApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_page">Login Page</string>
    <string name="enter_your_email_adress">Enter Your Email Address</string>
    <string name="register">Register</string>
    <string name="save">Save</string>
    <string name="enter_your_password">Enter your Password</string>
    <string name="signup_page">Signup Page</string>
    <string name="woman">Woman</string>
    <string name="men">Men</string>
    <string name="signup">Signup</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="pick_birthdate">Pick BirthDate</string>
    <string name="post_add">Post Add</string>
    <string name="messages">Messages</string>
    <string name="likes">Likes</string>
    <string name="post_user_name">Post Username</string>
    <string name="enter_post_text">Enter Post Text</string>
    <string name="share">Share</string>
    <string name="search">Search</string>
    <string name="okay">Okay</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
</resources>